--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
     working_dir: /app
     command: ["npm", "start"]
 
+services:
   app:
     image: mcr.microsoft.com/dotnet/aspnet:9.0
     container_name: pcmsapi
@@ -77,7 +78,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=pcms;Username=mcg;Password=health
       - AWS_ServiceURL=http://localstack:4566
-    command: ["dotnet", "PCMSApi.dll"]
+    entrypoint: ["dotnet", "PCMSApi.dll"]
     #volumes:
       #- .:/app
     #working_dir: /app
