--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - ./pcms-ui:/app/pcms-ui
     ports:
       - "3000:3000"
-    command: [ "npm", "run", "start" ]
+    command: sh -c "npm install && npm run start"
     environment:
       - CHOKIDAR_USEPOLLING=true
 
